docs-archive/apache-airflow-providers-standard/1.2.0/_sources/_api/airflow/providers/standard/exceptions/index.rst.txt
airflow.providers.standard.exceptions
=====================================

.. py:module:: airflow.providers.standard.exceptions

.. autoapi-nested-parse::

   Exceptions used by Standard Provider.



Exceptions
----------

.. autoapisummary::

   airflow.providers.standard.exceptions.AirflowExternalTaskSensorException
   airflow.providers.standard.exceptions.ExternalDagNotFoundError
   airflow.providers.standard.exceptions.ExternalDagDeletedError
   airflow.providers.standard.exceptions.ExternalTaskNotFoundError
   airflow.providers.standard.exceptions.ExternalTaskGroupNotFoundError
   airflow.providers.standard.exceptions.ExternalTaskFailedError
   airflow.providers.standard.exceptions.ExternalTaskGroupFailedError
   airflow.providers.standard.exceptions.ExternalDagFailedError
   airflow.providers.standard.exceptions.DuplicateStateError


Module Contents
---------------

.. py:exception:: AirflowExternalTaskSensorException

   Bases: :py:obj:`airflow.exceptions.AirflowException`


   Base exception for all ExternalTaskSensor related errors.


.. py:exception:: ExternalDagNotFoundError

   Bases: :py:obj:`AirflowExternalTaskSensorException`


   Raised when the external DAG does not exist.


.. py:exception:: ExternalDagDeletedError

   Bases: :py:obj:`AirflowExternalTaskSensorException`


   Raised when the external DAG was deleted.


.. py:exception:: ExternalTaskNotFoundError

   Bases: :py:obj:`AirflowExternalTaskSensorException`


   Raised when the external task does not exist.


.. py:exception:: ExternalTaskGroupNotFoundError

   Bases: :py:obj:`AirflowExternalTaskSensorException`


   Raised when the external task group does not exist.


.. py:exception:: ExternalTaskFailedError

   Bases: :py:obj:`AirflowExternalTaskSensorException`


   Raised when the external task failed.


.. py:exception:: ExternalTaskGroupFailedError

   Bases: :py:obj:`AirflowExternalTaskSensorException`


   Raised when the external task group failed.


.. py:exception:: ExternalDagFailedError

   Bases: :py:obj:`AirflowExternalTaskSensorException`


   Raised when the external DAG failed.


.. py:exception:: DuplicateStateError

   Bases: :py:obj:`AirflowExternalTaskSensorException`


   Raised when duplicate states are provided across allowed, skipped and failed states.


